# wingpanel-indicator-session

./: .travis.yml  CMakeLists.txt  README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
data/: SystemButtons.css  Userbox.css  session.appdata.xml.in  session.gresource.xml
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  en_AU.po  (+160 more)
po/extra/: aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+164 more)
src/: CMakeLists.txt  Config.vala.in  Indicator.vala  Userbox.vala  Utils.vala
src/Services/: DbusInterfaces.vala  EndSessionDialogServer.vala  ShutdownAction.vala  UpdateManager.vala  User.vala  UserManager.vala
src/Widgets/: Avatar.vala  EndSessionDialog.vala  OpenedAppsBox.vala  ShutdownAppsDialog.vala  SoftLabel.vala  UserBox.vala  UserListBox.vala
